# obs-studio

./: CMakeLists.txt
UI/: .gitignore  CMakeLists.txt  app.manifest  graphics-util.hpp  obs-app.cpp  properties-view.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-preview.cpp  window-basic-preview.hpp  window-basic-properties.cpp  window-basic-settings.cpp  window-basic-stats.cpp  window-basic-stats.hpp
UI/data/locale/: en-US.ini
UI/forms/: OBSBasic.ui  OBSBasicSettings.ui
cmake/Modules/: MacOSVersion.cmake
libobs/: CMakeLists.txt  obs-cocoa.c  obs-internal.h  obs-source-deinterlace.c  obs-source.c  obs-windows.c  obs.c  obs.h
libobs-d3d11/: d3d11-subsystem.cpp  d3d11-subsystem.hpp
libobs-metal/: CMakeLists.txt  metal-device.mm  metal-indexbuffer.mm  metal-samplerstate.mm  metal-shader.mm  metal-shaderbuilder.cpp  metal-shaderprocessor.hpp  metal-shaderprocessor.mm  metal-stagesurf.mm  metal-subsystem.hpp  metal-subsystem.mm  metal-swapchain.mm  metal-texture2d.mm  metal-vertexbuffer.mm  metal-zstencilbuffer.mm
libobs-opengl/: gl-cocoa.m  gl-subsystem.c  gl-subsystem.h  gl-windows.c  gl-x11.c
libobs/data/: color_management.effect  format_conversion.effect
libobs/graphics/: device-exports.h  graphics-imports.c  graphics-internal.h  graphics-util.c  graphics-util.h  graphics.c  graphics.h
libobs/media-io/: color-management.c  color-management.h  format-conversion.c  format-conversion.h  video-frame.c  video-io.h  video-matrices.c
libobs/util/: platform-cocoa.m  platform-nix.c  platform.h
plugins/decklink/: decklink-device-instance.cpp  decklink-device-instance.hpp  decklink-device-mode.cpp  decklink-device-mode.hpp  decklink-device.cpp  decklink.cpp  plugin-main.cpp
plugins/decklink/data/locale/: en-US.ini
plugins/obs-qsv11/: CMakeLists.txt
plugins/obs-text/: CMakeLists.txt
plugins/win-dshow/: CMakeLists.txt  win-dshow.cpp
plugins/win-dshow/data/locale/: en-US.ini
